Fix box alignment when highlighted

--- a/src/assets/stylesheets/index.scss
+++ b/src/assets/stylesheets/index.scss
@@ -1,3 +1,7 @@
+li {
+    box-sizing: border-box;
+}
+
 .main-body {
     width: 100%;
     height: 1000px;
